--- a/view/home/css/about_us.css
+++ b/view/home/css/about_us.css
@@ -27,3 +27,11 @@
     border-radius:100px;    
     box-shadow:0px 0px 10px 0px black;
 }
+@media screen and (max-width:700px){
+    .mision .contentDescription p{
+        width: 90%;
+    }
+    .mision .contentImg img{
+        width: 250px;
+    }
+}
